# Gravity_TechnicalAnalysis

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PROGRESS_REPORT.md  CHANGELOG.md  CODE_REVIEW_v1.1.0_Day2.md  CONTRIBUTING.md  DAY_1_COMPLETION_REPORT.md  DAY_1_COMPLETION_REPORT_v1.1.0.md  DAY_2_COMPLETION_REPORT.md  DAY_2_COMPLETION_REPORT_v1.1.0.md  DAY_4_COMPLETION_REPORT.md  DAY_6_COMPLETION_REPORT_v1.1.0.md  DAY_7_COMPLETION_REPORT_v1.1.0.md  Dockerfile  FILE_INDEX.md  FINAL_SCHEMA_UPDATE_SUMMARY.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INDICATOR_IMPLEMENTATION_SUMMARY.md  LICENSE  MARKDOWN_CLEANUP_ANALYSIS.md  MARKDOWN_CLEANUP_SUMMARY_FA.md  MICROSERVICE_EVALUATION.md  MIGRATION_GUIDE.md  Makefile  PHASE_2.1_CRITICAL_FIXES_PLAN.md  PROJECT_STRUCTURE.md  QUICK_START.py  QUICK_START_10_DAYS.md  README.md  RELEASE_DELIVERY_SUMMARY.md  RELEASE_NOTES_v1.2.0.md  RELEASE_PROCESS_v1.3.3.md  RELEASE_QUICK_START.md  RELEASE_STEPS_FA.md  RELEASE_SUMMARY.md  RELEASE_SUMMARY_v1.0.0_FA.md  (+30 more)
.github/: WORKFLOW_FIX_QUICK.md  WORKFLOW_SETUP.md
.github/workflows/: ci-cd.yml
alembic/versions/: ecb5692dd22d_initial_migration_for_historical_scores_.py
api/: response_formatters.py
api/v1/: __init__.py  ml.py
configs/: editorconfig
configs/tools/: catalog.json
database/: README.md  __init__.py  database_manager.py  historical_manager.py  historical_schemas.sql  project_schema.py  schemas.sql  tool_performance_history.sql
deployment/docker/: docker-compose.yml
docs/: API_SCORE_RANGE_CHANGE.md  CHANGELOG.md  CLI_DATABASE_GUIDE.md  CONTRIBUTING.md  DATABASE_SETUP.md  DIRECTORY_TREE.txt  DOCUMENTATION_REORGANIZATION_PLAN.md  INDEX.md  ML_LEARNING_SYSTEM.md  PROCESS_AUDIT_FA.md  PROCESS_DOCUMENTATION.md  PROCESS_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  TEST_EXECUTION_GUIDE.md  TREND_VS_MOMENTUM.md  database_schema_overview.md
docs/architecture/: DATA_SERVICE_INTEGRATION.md  FILE_IDENTITY_SYSTEM.md  MICROSERVICES_ARCHITECTURE.md  ML_WEIGHTS.md  MOMENTUM_ANALYSIS_PLAN.md  SCENARIO_ANALYSIS_DESIGN.md  SIGNAL_CALCULATION.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  SYSTEM_DIAGRAMS.md
docs/archive/: README.md
docs/changelog/: CHANGELOG.md
docs/guides/: ACCURACY_GUIDE.md  API_REFERENCE.md  CYCLE_ANALYSIS_GUIDE.md  DOW_THEORY.md  FIVE_DIMENSIONAL_DECISION_GUIDE.md  HISTORICAL_SYSTEM_GUIDE.md  ML_FEATURES_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_10_DAYS.md  SCORING_SYSTEM_GUIDE.md  SUPPORT_RESISTANCE_GUIDE.md  VOLUME_MATRIX_GUIDE.md  (+3 more)
indicators/: cycle.py  volatility.py
k8s/: redis.yaml
middleware/: auth.py  events.py  security.py  service_discovery.py
ml/: __init__.py  combined_trend_momentum_analysis.py  complete_analysis_pipeline.py  data_connector.py  feature_extraction.py  five_dimensional_decision_matrix.py  integrated_multi_horizon_analysis.py  ml_dimension_weights.py  ml_indicator_weights.py  ml_tool_recommender.py  multi_horizon_analysis.py  multi_horizon_cycle_analysis.py  multi_horizon_cycle_features.py  multi_horizon_feature_extraction.py  multi_horizon_momentum_analysis.py  multi_horizon_momentum_features.py  multi_horizon_support_resistance_analysis.py  multi_horizon_support_resistance_features.py  multi_horizon_volatility_analysis.py  multi_horizon_volatility_features.py  multi_horizon_weights.py  train_multi_horizon.py  train_multi_horizon_cycle.py  train_multi_horizon_momentum.py  train_multi_horizon_support_resistance.py  train_multi_horizon_volatility.py  train_pipeline.py  train_volume_dimension_matrix.py  train_weights.py  volume_dimension_matrix.py  weight_optimizer.py
models/: schemas.py
requirements/: base.txt  dev.txt  ml.txt  prod.txt
scripts/: backup_manager.py  check_tse_db.py  daily_update.py  db_cli.py  init_db.py  populate_last90.py  populate_market_data.py  populate_ml_weights_daily.py  populate_patterns_backtests.py  update_imports.py
services/: cache_service.py  performance_optimizer.py
src/: __init__.py  config.py  database.py
tests/: EXECUTION_GUIDE.py  QUICK_REFERENCE.md  README.md  README_TESTS.md  TEST_ORGANIZATION.md  TEST_STRUCTURE.md  TEST_SUMMARY.py  benchmark_momentum_indicators.py  benchmark_new_indicators.py  benchmark_volume_day3.py  conftest.py  mathematical_validation.py  test_advanced_backtesting.py  test_api_endpoints_comprehensive.py  test_auth.py  test_cache_service.py  test_cycle_fix.txt  test_data_ingestor_direct.py  test_day5_advanced_ml.py  test_day6_api_integration.py  test_deep_learning_comprehensive.py  test_events.py  test_indicators.py  test_ingestion_payload.py  test_mathematical_validation.py  test_momentum_indicators.py  test_new_trend_indicators.py  test_pattern_recognition.py  test_patterns_comprehensive.py  test_realtime_comprehensive.py  test_realtime_support.py  test_resilience.py  test_service_discovery.py  test_volume_day3.py  test_volume_indicators_comprehensive.py  validate_momentum_indicators.py  validate_volume_day3.py
utils/: display_formatters.py  sample_data.py
(+423 files in other folders)
